2008-12-11  Dan Williams  <dcbw@redhat.com>

	* Split into separate repository

2008-10-28  Tambet Ingo  <tambet@gmail.com>

	Patch from Bin Li <libin.charles@gmail.com>.

	* properties/import-export.c (handle_path_item): Search for certificates
	from the directory where the configuration file is from.

2008-10-26  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
	  properties/import-export.c
	  properties/nm-openvpn.c
		- Update for setting accessor changes

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
		- (advanced_dialog_new): The "Certificates (TLS)" tab should also be
			present for NM_OPENVPN_CONTYPE_PASSWORD

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
		- (tls_default_filter, tls_file_chooser_filter_new): accept ".cer"
			extension too

2008-10-11  Dan Williams  <dcbw@redhat.com>

	* src/nm-openvpn-service-openvpn-helper.c
		- (main): handle route_vpn_gateway (requires NM svn r4169) (bgo #549196)

2008-09-30  Dan Williams  <dcbw@redhat.com>

	* properties/nm-openvpn-dialog.glade
		- Fix the User and CA certificate entries in Password TLS mode, they
			were swapped with their labels (rh #464765)
		- Move private key password entries below private key chooser
		- Rename "Certificate Password" to "Private key password" since that's
			what they actually are

	* properties/auth-helpers.c
		- (fill_password): s/cert_password/priv_key_password/s
		- (fill_vpn_passwords): fix up for corrected widget names; fix mis-filling
			of pw_tls secret widgets where passwords were reversed
		- (auth_widget_save_secrets): fix up for corrected widget names

	* src/nm-openvpn-service.c
		- s/certpass/priv_key_pass/s becuase that's what it is

2008-09-29  Dan Williams  <dcbw@redhat.com>

	Patch from Robert Buchholz <rbu@gentoo.org>

	* src/nm-openvpn-service.c
		- (openvpn_watch_cb): don't access socket_channel if it doesn't exist
			because openvpn exited before the management socket could be set up
